--- a/contract/config.json
+++ b/contract/config.json
@@ -1629,7 +1629,7 @@
             },
             "href":{
               "type": "string",
-              "title": "Libellé du lien"
+              "title": "URL de la page"
             },
             "icon": {
               "title": "Icône",
