feat: can navigate to full screen visu from list & improved action button rendering

--- a/contract/config.json
+++ b/contract/config.json
@@ -1370,6 +1370,11 @@
           }
         ],
         "default": "icon"
+      },
+      "applicationsDirectNavigation": {
+        "type": "boolean",
+        "title": "Pas de boutons d'action sur la liste, navigation directe",
+        "default": false
       }
     }
   }, {
