--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "rate-limiter-flexible": "^2.4.1",
     "reconnecting-websocket": "^4.4.0",
     "request-ip": "^2.1.3",
+    "resolve-path": "^1.4.0",
     "sanitize-html": "^1.27.5",
     "sharp": "^0.31.3",
     "slugify": "^1.4.6",
