feat: add user email in events dataset. Uses must have at least one dataset

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Portals manager for data-fair",
   "main": "index.js",
   "scripts": {
-    "dev-server": "NODE_ENV=development DEBUG=upgrade* nodemon server",
+    "dev-server": "NODE_ENV=development DEBUG=sync-portal,upgrade* nodemon server",
     "dev-client": "NODE_ENV=development nuxt -p 3039",
     "dev-built": "NODE_ENV=development npm run build && rm -rf nuxt-dist-standalone && cp -rf nuxt-dist nuxt-dist-standalone && PROXY_NUXT=false npm run dev-server",
     "dev-deps": "docker-compose --profile dev up -d",
