--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,8 +83,17 @@ services:
     image: ghcr.io/data-fair/elasticsearch:7.17.1
     ports:
       - 9200:9200
+      - 9300:9300
     environment:
       - discovery.type=single-node
+      - xpack.security.enabled=false
+      - ingest.geoip.downloader.enabled=false
+      - ES_JAVA_OPTS=-Xms2g -Xmx2g
+    healthcheck:
+      test: ["CMD", "nc", "-z", "-v", "localhost", "9200"]
+      start_period: 10s
+      interval: 5s
+      retries: 5
 
   mongo:
     profiles:
