--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "http-link-header": "^1.1.0",
     "json-schema-defaults": "^0.4.0",
     "json-schema-ref-parser": "^9.0.9",
+    "json2csv": "^6.0.0-alpha.2",
     "marked": "^4.3.0",
     "memoizee": "^0.4.15",
     "mime-types": "^2.1.35",
