fix: use creation error management

--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "dev-server": "NODE_ENV=development DEBUG=sync-portal,upgrade* nodemon server",
     "dev-client": "NODE_ENV=development nuxt -p 3039",
     "dev-built": "NODE_ENV=development npm run build && rm -rf nuxt-dist-standalone && cp -rf nuxt-dist nuxt-dist-standalone && PROXY_NUXT=false npm run dev-server",
-    "dev-deps": "docker-compose --profile dev up -d",
+    "dev-deps": "docker compose --profile dev up -d",
     "stop-dev-deps": "docker compose --profile dev stop",
     "dev-zellij": "zellij --layout .zellij.kdl",
     "test": "NODE_ENV=test mocha --exit --bail test/",
-    "test-deps": "docker-compose --profile test up -d",
+    "test-deps": "docker compose --profile test up -d",
     "build": "nuxt build --standalone",
     "analyze": "nuxt build --analyze",
     "lint": "eslint --ext js,vue --ignore-path .gitignore .",
