--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "@koumoul/vjsf": "2.22.1",
     "@koumoul/vue-multianalytics": "^1.11.4",
     "@mdi/font": "^7.0.96",
+    "@mdi/js": "^7.4.47",
     "@nuxtjs/google-fonts": "^1.3.0",
     "@nuxtjs/vuetify": "^1.12.3",
     "clean-modules": "^2.0.4",
