--- a/contract/config.json
+++ b/contract/config.json
@@ -989,7 +989,7 @@
           "title": "Remplacer l'image principale par une visualisation",
           "type": "object",
           "x-if": "parent.value.homeTemplate.type=='default'",
-          "x-fromUrl": "{context.dataFairUrl}/api/v1/applications?q={q}&owner={context.owner}&size=1000{context.featuredVisibilityFilter}",
+          "x-fromUrl": "{context.dataFairUrl}/api/v1/applications?q={q}&owner={context.owner}&size=1000{context.featuredVisibilityFilter}&sort=createdAt:-1",
           "x-itemsProp": "results",
           "x-itemTitle": "title",
           "x-itemKey": "href",
@@ -1208,7 +1208,7 @@
           "title": "Visualisation mise en avant",
           "type": "object",
           "x-if": "parent.value.homeTemplate.type=='default'",
-          "x-fromUrl": "{context.dataFairUrl}/api/v1/applications?q={q}&owner={context.owner}&size=1000{context.featuredVisibilityFilter}",
+          "x-fromUrl": "{context.dataFairUrl}/api/v1/applications?q={q}&owner={context.owner}&size=1000{context.featuredVisibilityFilter}&sort=createdAt:-1",
           "x-itemsProp": "results",
           "x-itemTitle": "title",
           "x-itemKey": "href",
