--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.5.0",
     "@commitlint/config-conventional": "^17.4.4",
+    "@data-fair/frame": "^0.12.0",
     "@data-fair/sd-vue": "2.6.1",
     "@koumoul/v-iframe": "^1.4.2",
     "@koumoul/vjsf": "2.22.1",
