chore: docker image is called manager

--- a/.github/workflows/reuse-build.yml
+++ b/.github/workflows/reuse-build.yml
@@ -25,11 +25,11 @@ jobs:
         echo '{"version": "${{github.ref_name}}", "repository": "${{github.server_url}}/${{github.repository}}", "commit": "${{github.sha}}", "date": "'$(date -Is)'"}' > BUILD.json
         cat BUILD.json
 
-    - name: Prepare docker tags for main image
-      id: docker_meta_main
+    - name: Prepare docker tags for manager image
+      id: docker_meta_manager
       uses: docker/metadata-action@v5
       with:
-        images: ghcr.io/${{ github.repository }}
+        images: ghcr.io/${{ github.repository }}/manager
         tags: |
           type=ref,event=branch
           type=ref,event=pr
@@ -37,15 +37,15 @@ jobs:
           type=semver,pattern={{major}}.{{minor}}
           type=semver,pattern={{major}}
 
-    - name: Build and push main image
-      id: docker_build_main
+    - name: Build and push manager image
+      id: docker_build_manager
       uses: docker/build-push-action@v5
       with:
         context: .
         push: true
-        target: main
-        tags: ${{ steps.docker_meta_main.outputs.tags }}
+        target: manager
+        tags: ${{ steps.docker_meta_manager.outputs.tags }}
         platforms: linux/amd64
-        labels: ${{ steps.docker_meta_main.outputs.labels }}
+        labels: ${{ steps.docker_meta_manager.outputs.labels }}
         cache-from: type=registry,ref=ghcr.io/${{ github.repository }}/buildcache
         cache-to: type=registry,ref=ghcr.io/${{ github.repository }}/buildcache,mode=max
