--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "url": "https://gitlab.com/data-fair/portals/issues"
   },
   "homepage": "https://gitlab.com/data-fair/portals#readme",
+  "dependencies": {
+    "@data-fair/lib-types-builder": "^1.8.2"
+  },
   "devDependencies": {
     "@commitlint/config-conventional": "^19.8.1",
     "@data-fair/lib-node": "^2.8.2",
-    "@data-fair/lib-types-builder": "^1.8.2",
     "@types/config": "^3.3.5",
     "@types/debug": "^4.1.12",
     "@types/node": "^24.0.14",
