--- a/ui/package.json
+++ b/ui/package.json
@@ -18,12 +18,13 @@
     "@intlify/unplugin-vue-i18n": "^6.0.8",
     "@koumoul/v-iframe": "^2.4.5",
     "@mdi/js": "^7.4.47",
+    "@types/config": "^3.3.5",
     "@vitejs/plugin-vue": "^6.0.0",
     "sass-embedded": "^1.89.2",
     "unplugin-auto-import": "^19.3.0",
     "unplugin-vue-components": "^28.8.0",
     "unplugin-vue-router": "^0.14.0",
-    "vite": "^7.0.4",
+    "vite": "^6.3.5",
     "vite-plugin-vuetify": "^2.1.1",
     "vue": "^3.5.17",
     "vue-i18n": "^11.1.9",
