--- a/api/package.json
+++ b/api/package.json
@@ -21,5 +21,8 @@
     "http-terminator": "^3.2.0",
     "mongodb": "^6.17.0",
     "prom-client": "^15.1.3"
+  },
+  "devDependencies": {
+    "@data-fair/lib-utils": "^1.6.1"
   }
 }
