--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@data-fair/lib-node": "^2.8.2",
     "@types/config": "^3.3.5",
     "@types/debug": "^4.1.12",
+    "@types/express": "^5.0.3",
     "@types/node": "^24.0.14",
     "commitlint": "^19.8.1",
     "eslint": "^9.31.0",
