feat: work on fonts building

--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "lint": "eslint . && npm -w ui run lint",
     "lint-fix": "eslint --fix . && npm -w ui run lint-fix",
     "test": "npm run test-base -- test-it/*.ts",
-    "test-base": "NODE_ENV=test node --experimental-strip-types --test-force-exit --test-concurrency=1 --test",
+    "test-base": "NODE_ENV=test node --test-force-exit --test-concurrency=1 --test",
     "check-types": "tsc && npm -w ui run check-types",
     "prepare": "husky || true",
+    "prepare-fonts": "rm -rf api/assets/fonts && mkdir api/assets/fonts && node dev/scripts/prepare-fonts.js",
     "quality": "npm run dev-deps && npm run lint && npm run build-types && npm run check-types && npm -w ui run build && npm run test && npm audit --omit=dev --audit-level=critical"
   },
   "workspaces": [
@@ -48,6 +49,7 @@
     "eslint": "^9.31.0",
     "eslint-plugin-vue": "^10.3.0",
     "eslint-plugin-vuetify": "^2.5.2",
+    "google-fonts-complete": "^2.2.3",
     "husky": "^9.1.7",
     "neostandard": "^0.12.2",
     "tough-cookie": "^5.1.2"
