feat: work on basic portal edition

--- a/ui/package.json
+++ b/ui/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "NODE_CONFIG_DIR=../api/config/ vite --port 6220",
+    "dev": "NODE_CONFIG_DIR=../api/config/ vite --port 6227",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
     "check-types": "vue-tsc",
@@ -13,13 +13,14 @@
   "dependencies": {
     "@data-fair/frame": "^0.12.1",
     "@data-fair/lib-vue": "^1.21.1",
-    "@data-fair/lib-vuetify": "^1.10.1",
+    "@data-fair/lib-vuetify": "^1.11.0",
     "@intlify/unplugin-vue-i18n": "^6.0.8",
     "@koumoul/v-iframe": "^2.4.5",
     "@koumoul/vjsf": "^3.17.1",
     "@mdi/js": "^7.4.47",
     "@types/config": "^3.3.5",
     "@vitejs/plugin-vue": "^6.0.0",
+    "dayjs": "^1.11.13",
     "sass-embedded": "^1.89.2",
     "unplugin-auto-import": "^19.3.0",
     "unplugin-vue-components": "^28.8.0",
