--- a/ui/package.json
+++ b/ui/package.json
@@ -16,11 +16,14 @@
     "@data-fair/lib-vuetify": "^1.11.0",
     "@intlify/unplugin-vue-i18n": "^6.0.8",
     "@koumoul/v-iframe": "^2.4.5",
-    "@koumoul/vjsf": "^3.17.1",
+    "@koumoul/vjsf": "^3.19.1",
+    "@koumoul/vjsf-markdown": "^0.3.2",
     "@mdi/js": "^7.4.47",
     "@types/config": "^3.3.5",
     "@vitejs/plugin-vue": "^6.0.0",
     "dayjs": "^1.11.13",
+    "marked": "^15.0.12",
+    "sanitize-html": "^2.17.0",
     "sass-embedded": "^1.89.2",
     "unplugin-auto-import": "^19.3.0",
     "unplugin-vue-components": "^28.8.0",
