feat: work on portals management

--- a/dev/resources/nginx.conf
+++ b/dev/resources/nginx.conf
@@ -69,34 +69,10 @@ http {
         location /simple-directory/ {
           proxy_pass http://localhost:8087;
         }
-    }
 
-    # portal 1
-    server {
-        listen 5677;
-        server_name _;
-
-        # Transmit host, protocol and user ip, we use it for routing, rate limiting, etc.
-        proxy_set_header Host $http_host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $http_host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Client-IP $remote_addr;
-
-        # web socket support
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
-
-        # hmr
-        proxy_read_timeout 86400;
-        
-        location /simple-directory/ {
-          proxy_pass http://localhost:8087;
-        }
-
-        location / {
-          proxy_pass http://localhost:6277;
+        location /data-fair {
+          rewrite  ^/data-fair/(.*) /$1 break;
+          proxy_pass http://localhost:6201;
         }
     }
 }
